# FlopCpp

./: .gitattributes  AUTHORS  Dependencies  Doxyfile  Externals  INSTALL  LICENSE  MP_boolean.cpp  MP_constant.cpp  MP_constraint.cpp  MP_data.cpp  MP_domain.cpp  MP_expression.cpp  MP_index.cpp  MP_model.cpp  MP_set.cpp  MP_variable.cpp  Makefile  Makefile.am  Makefile.in  README  appveyor.yml  configure  configure.ac  flopc.cpp
.coin-or/: projDesc.xml
FlopC++/: MP_data.cpp  MP_model.cpp  Makefile.am  Makefile.in
FlopCpp/: AUTHORS  LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac  flopcpp-uninstalled.pc.in  flopcpp.pc.in
FlopCpp/MSVisualStudio/v7/: libflopc.vcproj
FlopCpp/MSVisualStudio/v7/FlopCpp/: FlopCpp.vcproj
FlopCpp/MSVisualStudio/v7/examples/bid/: bid.vcproj
FlopCpp/MSVisualStudio/v7/examples/coexx/: coexx.vcproj
FlopCpp/MSVisualStudio/v7/examples/cuttingStock/: cuttingStock.vcproj
FlopCpp/MSVisualStudio/v7/examples/gapmin/: gapmin.vcproj
FlopCpp/MSVisualStudio/v7/examples/sodoku/: sodoku.vcproj
FlopCpp/MSVisualStudio/v7/examples/stochBenders/: stochBenders.vcproj
FlopCpp/MSVisualStudio/v7/examples/tap/: tap.vcproj
FlopCpp/MSVisualStudio/v7/examples/train/: train.vcproj
FlopCpp/MSVisualStudio/v7/examples/transport/: transport.vcproj
FlopCpp/MSVisualStudio/v7/examples/xbsl/: xbsl.vcproj
FlopCpp/MSVisualStudio/v8/: FlopCpp.sln
FlopCpp/MSVisualStudio/v8/FlopCpp/unitTest/: unitTest.vcproj
FlopCpp/MSVisualStudio/v8/examples/aircraft/: aircraft.vcproj
FlopCpp/MSVisualStudio/v8/examples/bid/: bid.vcproj
FlopCpp/MSVisualStudio/v8/examples/coexx/: coexx.vcproj
FlopCpp/MSVisualStudio/v8/examples/cross/: cross.vcproj
FlopCpp/MSVisualStudio/v8/examples/multiProduct/: multiProduct.vcproj
FlopCpp/MSVisualStudio/v8/examples/tap/: tap.vcproj
FlopCpp/MSVisualStudio/v8/examples/transport/: transport.vcproj
FlopCpp/MSVisualStudio/v8/examples/xbsl/: xbsl.vcproj
FlopCpp/MSVisualStudio/v9/: CplexConfiguration.vsprops  FlopCpp.sln  IncludeFiles.vsprops  libflopc.vcproj
FlopCpp/MSVisualStudio/v9/FlopCpp/: FlopCpp.vcproj
FlopCpp/MSVisualStudio/v9/FlopCpp/unitTest/: unitTest.vcproj
FlopCpp/MSVisualStudio/v9/MyTest/: MyTest.vcproj
FlopCpp/MSVisualStudio/v9/exampleFlopCppAKSTampl/: ReadMe.txt  exampleFlopCppAKSTampl.cpp  exampleFlopCppAKSTampl.vcproj  stdafx.cpp
FlopCpp/MSVisualStudio/v9/examples/: IncludeFilesExamples.vsprops
FlopCpp/MSVisualStudio/v9/examples/aircraft/: aircraft.vcproj
FlopCpp/MSVisualStudio/v9/examples/ampl/: ampl.vcproj
FlopCpp/MSVisualStudio/v9/examples/bid/: bid.vcproj
FlopCpp/MSVisualStudio/v9/examples/coex/: coex.vcproj
FlopCpp/MSVisualStudio/v9/examples/coexx/: coexx.vcproj
FlopCpp/MSVisualStudio/v9/examples/cross/: cross.vcproj
FlopCpp/MSVisualStudio/v9/examples/cuttingStock/: cuttingStock.vcproj
FlopCpp/MSVisualStudio/v9/examples/gapmin/: gapmin.vcproj
FlopCpp/MSVisualStudio/v9/examples/magic/: magic.vcproj
FlopCpp/MSVisualStudio/v9/examples/mine/: mine.vcproj
FlopCpp/MSVisualStudio/v9/examples/multiProduct/: multiProduct.vcproj
FlopCpp/MSVisualStudio/v9/examples/sodoku/: sodoku.vcproj
FlopCpp/MSVisualStudio/v9/examples/stochBenders/: stochBenders.vcproj
FlopCpp/MSVisualStudio/v9/examples/sudoku/: sudoku.vcproj
FlopCpp/MSVisualStudio/v9/examples/tap/: tap.vcproj
FlopCpp/MSVisualStudio/v9/examples/train/: train.vcproj
FlopCpp/MSVisualStudio/v9/examples/transport/: transport.vcproj
FlopCpp/MSVisualStudio/v9/examples/xbsl/: xbsl.vcproj
FlopCpp/MSVisualStudio/v9/libflopcpp/: libflopc.vcproj
FlopCpp/examples/: CEPFlopCppModel.cpp  Makefile.in  aircraft.cpp  akstampl2.cpp  ampl.cpp  bid.cpp  coex.cpp  coexx.cpp  cross.cpp  cuttingStock.cpp  gapmin.cpp  huang.cpp  huang.hpp  huang_main.cpp  magic.cpp  mine.cpp  multiProduct.cpp  runall  runone  smistampl.cpp  sodoku.cpp  stampl.cpp  stampl2.cpp  stampl3.cpp  stampl_core.cpp  stampl_core2.cpp  stampl_imp.cpp  stampl_implicit.cpp  stampl_mat.cpp  stampl_nonanticip.cpp  stampl_split.cpp  stochbenders.cpp  sudoku.cpp  tap.cpp  train.cpp  transport.cpp  xbsl.cpp
FlopCpp/inc/: config_flopcpp.h.in
FlopCpp/src/: FlopCppConfig.h  MP_boolean.cpp  MP_boolean.hpp  MP_constant.cpp  MP_constant.hpp  MP_constraint.cpp  MP_constraint.hpp  MP_data.cpp  MP_data.hpp  MP_domain.cpp  MP_domain.hpp  MP_expression.cpp  MP_expression.hpp  MP_index.cpp  MP_index.hpp  MP_model.cpp  MP_model.hpp  MP_random_constant.cpp  MP_random_constant.hpp  MP_random_data.cpp  MP_random_data.hpp  MP_set.cpp  MP_set.hpp  MP_shared_implementation_details.cpp  MP_shared_implementation_details.hpp  MP_utilities.cpp  MP_utilities.hpp  MP_variable.cpp  MP_variable.hpp  Makefile.am  Makefile.in  config.h.in  config_default.h  config_flopcpp.h.in  config_flopcpp_default.h  flopc.cpp  flopc.hpp
FlopCpp/test/: Makefile.am  Makefile.in  MyTests.cpp  unitTest.cpp
FlopCpp/unittest/: Makefile.am  Makefile.in  TestBed.cpp  TestBed.hpp  TestItem.cpp  TestItem.hpp  booleanTest.cpp  constantTest.cpp  indexTest.cpp  makeUnittest  setTest.cpp  unitTest.cpp  unitTest.hpp
Samples/: Makefile  aircraft.cpp  ampl.cpp  bid.cpp  coex.cpp  coexx.cpp  cross.cpp  cuttingStock.cpp  gapmin.cpp  magic.cpp  mine.cpp  multiProduct.cpp  runall  runone  sodoku.cpp  stochbenders.cpp  tap.cpp  train.cpp  transport.cpp  xbsl.cpp
Smi/: Makefile.am  Makefile.in  configure  configure.ac
Smi/src/: Makefile.am  Makefile.in  OsiStochasticSolverInterface.cpp  OsiStochasticSolverInterface.hpp  SmiCoreCombineRule.cpp  SmiCoreCombineRule.hpp  SmiDiscreteDistribution.cpp  SmiDiscreteDistribution.hpp  SmiMessage.cpp  SmiScenarioTree.hpp  SmiScnData.cpp  SmiScnData.hpp  SmiScnModel.cpp  SmiScnModel.hpp  SmiSmpsIO.cpp  SmiSmpsIO.hpp
Smi/test/: Makefile.am  Makefile.in  unitTest.cpp
include/: MP_boolean.hpp  MP_constant.hpp  MP_constraint.hpp  MP_data.hpp  MP_domain.hpp  MP_expression.hpp  MP_index.hpp  MP_model.hpp  MP_set.hpp  MP_utilities.hpp  MP_variable.hpp  Timer.hpp  flopc.hpp
trunk/: AUTHORS  Externals  LICENSE  MP_boolean.cpp  MP_constant.cpp  MP_domain.cpp  MP_index.cpp  Makefile  (+1 more)
(+118 files in other folders)
