# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id: Makefile.am 74 2006-07-10 18:47:19Z andreasw $

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                         unitTest for Coin                            #
########################################################################

noinst_PROGRAMS = unitTest

unitTest_SOURCES = \
	unitTest.cpp

# List libraries of COIN projects
unitTest_LDADD = \
	$(SMIOBJDIR)/src/libSmi.la \
	$(OSIOBJDIR)/src/OsiClp/libOsiClp.la \
	$(OSIOBJDIR)/src/libOsi.la \
	$(CLPOBJDIR)/src/libClp.la \
	$(COINUTILSOBJDIR)/src/libCoinUtils.la

# List additional libraries
LIBS += $(ADDLIBS)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = \
        -I`$(CYGPATH_W) $(SMISRCDIR)/src` \
        -I`$(CYGPATH_W) $(OSISRCDIR)/src/OsiClp` \
        -I`$(CYGPATH_W) $(OSISRCDIR)/src` \
        -I`$(CYGPATH_W) $(CLPSRCDIR)/src` \
        -I`$(CYGPATH_W) $(CLPOBJDIR)/inc` \
        -I`$(CYGPATH_W) $(COINUTILSSRCDIR)/src` \
        -I`$(CYGPATH_W) $(COINUTILSOBJDIR)/inc`

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = 
